# vmpl-tests

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  build.sh  configure.ac  install_check.sh  install_mxml.sh  install_zlib.sh  meson.build  package.sh
include/: args.h  benchmark.h
scripts/: bench-memcached.sh  bench-redis.sh
src/: args.c  benchmark.c  client.c  fork.c  hello.c  my-device.c  program.c  semaphore_test.c  server.c  test.c  test_bitmap.c  test_brk.c  test_fork.c  test_ipc.c  test_ipi.c  test_maps.c  test_mem.c  test_misc.c  test_mmap.c  test_mxml.c  test_pagemap.c  test_proc.c  test_pthread.c  test_sandbox.c  test_sbrk.c  test_security.c  test_sem.c  test_signal.c  test_spsc.c  test_sys.c  test_vdso.c  test_vmpl_hot_calls.c  test_zlib.c  tests.c  timetest.c  vmpl-process.c  xsave-new.c  xsave.c
src/bench/: bench_dune_ring.c
